Setup Main section and images

--- a/index.html
+++ b/index.html
@@ -48,6 +48,59 @@
             class="profile-img"/img>
           </div>
         </header>
+
+        <main class="main">
+          <article class="container">
+            <div class="images">
+              <img
+                src="img/sneakers-1.PNG"
+                alt="Image of sneakers"
+                class="item-img item-img--main"
+              />
+              <div class="images-small">
+                <img
+                  src="img/sneakers-1.PNG"
+                  alt="Image of sneakers"
+                  class="item-img"
+                />
+                <img
+                  src="img/sneakers-2.PNG"
+                  alt="Image of sneakers"
+                  class="item-img"
+                />
+                <img
+                  src="img/sneakers-3.PNG"
+                  alt="Image of sneakers"
+                  class="item-img"
+                />
+                <img
+                  src="img/sneakers-4.PNG"
+                  alt="Image of sneakers"
+                  class="item-img"
+                />
+              </div>
+            </div>
+
+            <div class="item-box">
+              <p class="subheading">Sneaker Company</p>
+              <h1 class="heading-primary">Fall Limited Edition Sneakers</h1>
+              <p class="item-desc">
+                These low-profile sneakers are your perfect casual wear
+                companion. Featuring a durable rubber outer sole, they'll
+                withstand everything the weather can offer.
+              </p>
+              <div class="price-box">
+                <div class="current-price">$125.00</div>
+                <div class="discount">50%</div>
+                <div class="regular-price">$250</div>
+              </div>
+              <div class="purchase-box">
+                <div class="amount-selection">- 0 +</div>
+                <button class="add-to-cart">Add to cart</button>
+              </div>
+            </div>
+          </article>
+        </main>
       </div>
     </div>
 
