--- a/index.html
+++ b/index.html
@@ -111,6 +111,50 @@
             </div>
           </article>
         </main>
+
+        <div class="modal hidden">
+          <button class="close-modal">&times;</button>
+          <div class="main-img-container">
+            <ion-icon
+              name="chevron-back-circle"
+              class="chevron-back-circle"
+            ></ion-icon>
+            <img
+              src="img/sneakers-1.PNG"
+              alt="Image of sneakers"
+              class="item-img item-img--main"
+            />
+            <ion-icon
+              name="chevron-forward-circle"
+              class="chevron-forward-circle"
+            ></ion-icon>
+          </div>
+
+          <div class="images-small">
+            <img
+              src="img/sneakers-1.PNG"
+              alt="Image of sneakers"
+              class="item-img"
+            />
+            <img
+              src="img/sneakers-2.PNG"
+              alt="Image of sneakers"
+              class="item-img"
+            />
+            <img
+              src="img/sneakers-3.PNG"
+              alt="Image of sneakers"
+              class="item-img"
+            />
+            <img
+              src="img/sneakers-4.PNG"
+              alt="Image of sneakers"
+              class="item-img"
+            />
+          </div>
+        </div>
+
+        <div class="overlay hidden"></div>
       </div>
     </div>
 
@@ -122,5 +166,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
