Sort out images

--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
               <img
                 src="img/sneakers-1.PNG"
                 alt="Image of sneakers"
-                class="item-img item-img--main"
+                class="item-img--main"
               />
               <div class="images-small">
                 <img
                   src="img/sneakers-1.PNG"
                   alt="Image of sneakers"
-                  class="item-img"
+                  class="item-img-small"
                 />
                 <img
                   src="img/sneakers-2.PNG"
                   alt="Image of sneakers"
-                  class="item-img"
+                  class="item-img-small"
                 />
                 <img
                   src="img/sneakers-3.PNG"
                   alt="Image of sneakers"
-                  class="item-img"
+                  class="item-img-small"
                 />
                 <img
                   src="img/sneakers-4.PNG"
                   alt="Image of sneakers"
-                  class="item-img"
+                  class="item-img-small"
                 />
               </div>
             </div>
@@ -122,7 +122,7 @@
             <img
               src="img/sneakers-1.PNG"
               alt="Image of sneakers"
-              class="item-img item-img--main"
+              class="item-img--main"
             />
             <ion-icon
               name="chevron-forward-circle"
@@ -134,22 +134,22 @@
             <img
               src="img/sneakers-1.PNG"
               alt="Image of sneakers"
-              class="item-img"
+              class="item-img-small"
             />
             <img
               src="img/sneakers-2.PNG"
               alt="Image of sneakers"
-              class="item-img"
+              class="item-img-small"
             />
             <img
               src="img/sneakers-3.PNG"
               alt="Image of sneakers"
-              class="item-img"
+              class="item-img-small"
             />
             <img
               src="img/sneakers-4.PNG"
               alt="Image of sneakers"
-              class="item-img"
+              class="item-img-small"
             />
           </div>
         </div>
