Apply amount changing functions

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
               </div>
               <div class="purchase-box">
                 <div class="amount-selection">
-                  <div class="amount-change">-</div>
+                  <div class="amount-change amount-decrease">-</div>
                   <div class="amount">0</div>
-                  <div class="amount-change">+</div>
+                  <div class="amount-change amount-increase">+</div>
                 </div>
                 <button class="add-to-cart">
                   <div class="btn-flex">
