--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <div class="container">
             <nav class="navigation">
               <ul class="nav-list">
+                <li class="hamburger">
+                  <div class="hamburger-line"></div>
+                  <div class="hamburger-line"></div>
+                  <div class="hamburger-line"></div>
+                </li>
                 <li>
                   <a href="index.html" class="nav-link" id="logo">Sneakers</a>
                 </li>
