--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <article class="container">
             <div class="images">
               <img
-                src="img/sneakers-1.PNG"
+                src="img/sneakers-large.PNG"
                 alt="Image of sneakers"
                 class="item-img--main"
               />
@@ -125,7 +125,7 @@
               class="chevron-back-circle"
             ></ion-icon>
             <img
-              src="img/sneakers-1.PNG"
+              src="img/sneakers-large.PNG"
               alt="Image of sneakers"
               class="item-img--main"
             />
