--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
             <img
               src="img/sneakers-1.PNG"
               alt="Image of sneakers"
-              class="item-img-small"
+              class="item-img-small modal-img-1"
             />
             <img
               src="img/sneakers-2.PNG"
               alt="Image of sneakers"
-              class="item-img-small"
+              class="item-img-small modal-img-2"
             />
             <img
               src="img/sneakers-3.PNG"
               alt="Image of sneakers"
-              class="item-img-small"
+              class="item-img-small modal-img-3"
             />
             <img
               src="img/sneakers-4.PNG"
               alt="Image of sneakers"
-              class="item-img-small"
+              class="item-img-small modal-img-4"
             />
           </div>
         </div>
