Add chevrons in mobile view

--- a/index.html
+++ b/index.html
@@ -58,11 +58,22 @@
         <main class="main">
           <article class="container">
             <div class="images">
-              <img
-                src="img/sneakers-large.PNG"
-                alt="Image of sneakers"
-                class="item-img--main"
-              />
+              <div class="main-img-container">
+                <ion-icon
+                  name="chevron-back-circle"
+                  class="main-chevron main-chevron--back"
+                ></ion-icon>
+                <img
+                  src="img/sneakers-large.PNG"
+                  alt="Image of sneakers"
+                  class="item-img--main"
+                />
+                <ion-icon
+                  name="chevron-forward-circle"
+                  class="main-chevron main-chevron--forward"
+                ></ion-icon>
+              </div>
+
               <div class="images-small">
                 <img
                   src="img/sneakers-1.PNG"
