Main menu for mobile devices (dropdown menu)

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         </header>
 
         <main class="main">
+          <div class="hamburger-menu hidden">
+            <a href="#" class="hamburger-item">Collections</a>
+            <a href="#" class="hamburger-item">Men</a>
+            <a href="#" class="hamburger-item">Women</a>
+            <a href="#" class="hamburger-item">About</a>
+            <a href="#" class="hamburger-item">Contact</a>
+          </div>
+
           <article class="container">
             <div class="images">
               <div class="main-img-container">
