Add total price tooltip

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                     <ion-icon name="cart-outline"></ion-icon>
                     <span>Add to cart</span>
                   </div>
+                  <div class="tooltip">Total price: $0</div>
                 </button>
               </div>
             </div>
