Create Checkout page

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                   <div class="amount">0</div>
                   <div class="amount-change amount-increase">+</div>
                 </div>
-                <button class="add-to-cart">
+                <a class="add-to-cart" href="checkout.html">
                   <div class="btn-flex">
                     <ion-icon name="cart-outline"></ion-icon>
                     <span>Add to cart</span>
                   </div>
                   <div class="tooltip">Total price: $0</div>
-                </button>
+                </a>
               </div>
             </div>
           </article>
