--- a/checkout.html
+++ b/checkout.html
@@ -84,6 +84,7 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
 
+    <script src="js/script.js"></script>
     <script src="js/checkout.js"></script>
   </body>
 </html>
