Add Total Price to pages

--- a/checkout.html
+++ b/checkout.html
@@ -69,6 +69,7 @@
               <div class="name">Article:</div>
               <div class="price">Price:</div>
               <div class="quantity">Quantity:</div>
+              <div class="total">Total:</div>
             </div>
           </article>
         </main>
