--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
                     <ion-icon name="cart-outline"></ion-icon>
                     <span>Add to cart</span>
                   </div>
-                  <div class="tooltip">Total price: $0</div>
                 </a>
+                <div class="amount-total">
+                  <div class="tooltip">Total: $0</div>
+                </div>
               </div>
             </div>
           </article>
