Implement Cart functionality

--- a/checkout.html
+++ b/checkout.html
@@ -47,7 +47,7 @@
                 <li><a href="#" class="nav-link">Contact</a></li>
               </ul>
             </nav>
-            <a href="#" class="nav-link cart">
+            <a href="checkout.html" class="nav-link cart">
               <ion-icon name="cart-outline"></ion-icon>
             </a>
             <img src="img/profile.jpg" alt="Profile Picture"
@@ -64,12 +64,12 @@
             <a href="#" class="hamburger-item">Contact</a>
           </div>
 
-          <article class="container">
-            <div class="product-details">
-              <div class="name">Article:</div>
-              <div class="price">Price:</div>
-              <div class="quantity">Quantity:</div>
-              <div class="total">Total:</div>
+          <article class="cart">
+            <div class="container">
+              <div class="cart-header">Article</div>
+              <div class="cart-header">Price</div>
+              <div class="cart-header">Quantity</div>
+              <div class="cart-header">Total</div>
             </div>
           </article>
         </main>
