--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li><a href="#" class="nav-link">Contact</a></li>
               </ul>
             </nav>
-            <a href="#" class="nav-link cart">
+            <a href="checkout.html" class="nav-link cart">
               <ion-icon name="cart-outline"></ion-icon>
             </a>
             <img src="img/profile.jpg" alt="Profile Picture"
