Fix storage bug

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <div class="amount">0</div>
                   <div class="amount-change amount-increase">+</div>
                 </div>
-                <a class="add-to-cart" href="checkout.html">
+                <a class="add-to-cart">
                   <div class="btn-flex">
                     <ion-icon name="cart-outline"></ion-icon>
                     <span>Add to cart</span>
