Make it (more) responsive

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   </div>
                 </a>
                 <div class="amount-total">
-                  <div class="tooltip">Total: $0</div>
+                  <div class="tooltip">$0.00</div>
                 </div>
               </div>
             </div>
